syntax = "proto3";

package image;

import "google/protobuf/empty.proto";

message Image {
  bytes data = 1;
}

service ImageService {
  rpc SendImage (Image) returns (google.protobuf.Empty) {}
  rpc GetImage (google.protobuf.Empty) returns (stream Image) {}
}